--- a/index.css
+++ b/index.css
@@ -40,13 +40,17 @@
    
 }
 .mainnav a{
-    background-image: url(./buttonbg.png);
     border: 1px solid black;
     border-radius: 30px;
     padding: .1rem;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-size: large;
     text-align: center;
+}
+.mainnav a:hover{
+    background-color: #AFAFAF;
+    transform: scale(1.1);
+    color: white;
 }
 #about{
     width: 3.8rem;
@@ -74,7 +78,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(./background.jpg);
+    background-image: url(./blackbg.jpg);
     background-size: cover;
     /* border: 1px solid green; */
     width: 100%;
@@ -84,9 +88,10 @@
 #dp{
     background-image: url(./dp.jpg);
     background-size: cover;
+  
     width: 15rem;
     height: 15rem;
-    /* border: 1px solid wheat; */
+    border: 10px solid rgb(255, 255, 255);
 }
 #mainname{
     color: white;
@@ -109,6 +114,7 @@
 
 }
 .icons{
+    margin-top: 50px;
     width: 10rem;
     height: 3rem;
     /* border: 1px solid rgb(252, 177, 177); */
