--- a/index.css
+++ b/index.css
@@ -10,6 +10,8 @@
     height: 100vh;
 }
 .nav{
+    background-color: rgb(115, 161, 161);
+    border-top-left-radius: 50px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -18,7 +20,7 @@
     /* border: 1px solid brown; */
 }
 #name{
-    
+    padding-left: 30px;
     width: 60%;
     height: 80%;
     /* border: 1px solid brown; */
