--- a/Animation.css
+++ b/Animation.css
@@ -16,3 +16,39 @@
     }
     
 }
+#download{
+    animation: LeftMove linear 1.5s;
+}
+@keyframes LeftMove {
+    0%{
+        transform: scale(1.1);
+    }
+    25%{
+        transform: scale(1);
+    }
+    25%{
+        left: 0;    
+        
+    }
+    100%{
+        left: 14rem;
+    }
+}
+#hire{
+    animation: RightMove linear 1.5s;
+}
+@keyframes RightMove {
+    0%{
+        transform: scale(1.1);
+    }
+    25%{
+        transform: scale(1);
+    }
+    25%{
+        right: 0;    
+        
+    }
+    100%{
+        right: 14rem;
+    }
+}
