--- a/index.css
+++ b/index.css
@@ -5,7 +5,6 @@
 }
 .main {
     margin: 10px auto;
-    /* border: 1px solid black; */
     width:90%;
     height: 100vh;
 }
@@ -128,4 +127,37 @@
 .icon i{
     font-size: x-large;
     color: white;
+}
+.downhire{
+    display: flex;
+    /* justify-content: center; */
+    width: 100%;
+    /* border: 1px solid white; */
+}
+.btndh{
+    margin: auto auto;
+    padding-top: 12px;
+    text-align: center;
+    /* border: 1px solid green; */
+    width: 10rem;
+    height: 3rem;
+    border-radius: 5px;
+}
+
+.downhire a:link{
+    text-decoration: none;
+}
+.btndh a{
+    color: white;
+}
+#download{
+    position: relative;
+    left: 14rem;
+
+    border: 2px solid white;
+}
+#hire{
+    position: relative;
+    right: 14rem;
+    background-color: rgb(55, 180, 230);
 }
