--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+body{
+    font-family: 'Lato', sans-serif;
+}
 * {
     box-sizing: border-box;
     margin: 0;
@@ -40,7 +43,7 @@
 }
 .mainnav a{
     border: 1px solid black;
-    border-radius: 30px;
+    border-radius: 35px;
     padding: .1rem;
     color: rgb(0, 0, 0);
     font-size: large;
@@ -150,14 +153,21 @@
 .btndh a{
     color: white;
 }
+.btndh:hover{
+    /* color: white; */
+    background-color: white;
+}
+.btndh a:hover{
+    color: black;
+}
 #download{
     position: relative;
-    left: 14rem;
+    left: 12rem;
 
     border: 2px solid white;
 }
 #hire{
     position: relative;
-    right: 14rem;
+    right: 12rem;
     background-color: rgb(55, 180, 230);
 }
