--- a/about.css
+++ b/about.css
@@ -1,23 +1,85 @@
+body{
+    font-family: 'Lato', sans-serif;
+    /* background-color: rgb(160, 205, 205); */
+    background-color: black;
+}
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+.header{
+    display: flex;
+    align-items: center;
+    width:100%;
+    height: 5rem;
+
+}
+.header .about{
+    padding-top: 18px;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    text-align: center;
+    width: 55%;
+    height: 100%;
+    font-weight: 600;
+    font-size: 2.3rem;
+    background-color: rgb(167, 230, 255);
+}
+.header .back{
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 55%;
+    padding-top: 21px;
+    text-align: center;
+    width: 6%;
+    height: 100%;
+    background-color: rgb(167, 230, 255);
+}
+.back i{
+    font-size: xx-large;
+    color: black;
+}
+.back i:hover{
+    color: white;
+}
 .main {
-    margin: 2rem auto;
-    width:90%;
+    margin-top: 2rem;
+    width:100%;
     height: 100vh;
     border: 1px solid black;
 }
 .description{
-    margin: auto;
+    margin-top: 3rem;
+    color: white;
     display: flex;
-    justify-content: space-between;
-    width: 70%;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 5rem;
 }
 .head{
+    padding-top: 1rem;
+    text-align: center;
+    color: black;
+    height: 5rem;
     font-size: xx-large;
-    font-weight: lighter;
-    border: 1px solid black;
+    /* font-weight: lighter; */
+    background-color: rgb(167, 230, 255);
+}
+#aboutme{
+    border-top-left-radius: 3rem;
+    border-bottom-left-radius: 3rem;
+    border-top-right-radius: 3rem;
+    border-bottom-right-radius: 3rem;
+    width: 14rem;
+
+}
+#bio{
+    border-top-left-radius: 3rem;
+    border-bottom-left-radius: 3rem;
+    border-top-right-radius: 3rem;
+    border-bottom-right-radius: 3rem;
+    width: 8rem;
 
 }
