--- a/about.css
+++ b/about.css
@@ -1,7 +1,7 @@
 body{
     font-family: 'Lato', sans-serif;
     /* background-color: rgb(160, 205, 205); */
-    background-color: black;
+    background-color: rgb(0, 0, 0);
 }
 *{
     box-sizing: border-box;
@@ -47,7 +47,6 @@ body{
     margin-top: 2rem;
     width:100%;
     height: 100vh;
-    border: 1px solid black;
 }
 .heading{
     margin-top: 3rem;
@@ -160,6 +159,59 @@ body{
 }
 .bioline a:hover{
     color: rgb(151, 98, 98);
+}
+.footer{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    width:100%;
+    height: 5rem;
+}
+.footer .footernav{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    text-align: center;
+    width: 55%;
+    height: 100%;
+    font-size: large;
+    background-color: rgb(167, 230, 255);
+}
+.footernav a{
+    border: 2px solid black;
+    border-radius: 35px;
+    padding: .1rem;
+    color: rgb(0, 0, 0);
+    font-size: large;
+    text-align: center;
+}
+.footernav a:hover{
+    background-color: #000000;
+    transform: scale(1.1);
+    color: rgb(255, 255, 255);
+}
+#about{
+    width: 4rem;
+}
+#skills{
+    width: 3.7rem;
+}
+#exp{
+    width: 6.4rem;
+}
+#edu{
+    width: 6.2rem;
+}
+#portfolio{
+    width: 5.5rem;
+}
+#contact{
+    width: 5rem;
+}
+.footernav a:link{
+    text-decoration: none;
 }
 
 ANIMATIONS
